<resources>
    <string name="app_name">Remote Application</string>

    <string name="layered_design_button">1. Multiple Screen Design</string>
    <string name="iphone_design_button">2. iPhone Design</string>
    <string name="design_prompt">Choose a design:</string>
    <string name="title_layered_design">Layered Design</string>
    <string name="title_iphone_design">iPhone Design</string>

    <!-- Generic button strings -->
    <string name="button_main_menu">MAIN MENU</string>
    <string name="button_power">POWER</string>
    <string name="volume_text">VOL</string>
    <string name="channel_text">CH</string>
    <string name="up_text">UP</string>
    <string name="down_text">DOWN</string>
    <string name="left_text">LEFT</string>
    <string name="right_text">RIGHT</string>
    <string name="select_text">SELECT</string>
    <string name="record_text">RECORD</string>
    <string name="rewind_text">REWIND</string>
    <string name="forward_text">FORWARD</string>
    <string name="pause_text">PAUSE</string>
    <string name="play_text">PLAY</string>
    <string name="stop_text">STOP</string>
    <string name="delete_text">DELETE</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>

    <!-- Help menu strings -->
    <string name="help1">How to record a program</string>
    <string name="help2">How to use playback</string>
    <string name="help3">How to use guide</string>

    <!-- Layered Design strings -->
    <string name="menu">Menu</string>
    <string name="menu_remote">REMOTE</string>
    <string name="menu_guide">GUIDE</string>
    <string name="menu_playback">PLAYBACK</string>
    <string name="menu_help">HELP</string>
    <string name="back">BACK</string>

    <!-- Layered Design Tutorial strings -->
    <string name="layered_main_tutorial">tutorial1</string>


    <!-- iPhone Design strings -->
    <string name="panel_text">PANEL</string>
    <string name="help_text">HELP</string>
    <string name="edit_text">EDIT</string>
    <string name="back_text">BACK</string>
    <string name="recordtv_text">RECORDED TV</string>

    <!-- Screen text changes -->
    <string name="screen_guide">Guide: CH.3, SAT 10 AM</string>
    <string name="screen_record">Recording</string>
    <string name="screen_playback">Playback: On Vid 1</string>
    <string name="screen_main">TV</string>


</resources>
