<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.meghanchua.remoteapp.LayeredMain">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:text="@string/button1"
            android:id="@+id/button"
            android:layout_row="0"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:text="@string/button5"
            android:id="@+id/button5"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:text="@string/button6"
            android:id="@+id/button6"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:text="@string/button7"
            android:id="@+id/button7"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:text="@string/button8"
            android:id="@+id/button8"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:text="@string/button9"
            android:id="@+id/button9"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_row="0"
            android:layout_column="2" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_remote"
        android:id="@+id/layed_main_remote"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_power"
        android:id="@+id/button_power"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/layed_main_remote"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button10"
        android:layout_below="@+id/layed_main_remote"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="19dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button11"
        android:layout_alignTop="@+id/button10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button12"
        android:layout_below="@+id/button10"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignStart="@+id/button10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button13"
        android:layout_below="@+id/button11"
        android:layout_alignLeft="@+id/button11"
        android:layout_alignStart="@+id/button11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_text"
        android:id="@+id/volume_text"
        android:layout_below="@+id/button12"
        android:layout_alignLeft="@+id/button12"
        android:layout_alignStart="@+id/button12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_text"
        android:id="@+id/channel_text"
        android:layout_below="@+id/button13"
        android:layout_alignRight="@+id/button13"
        android:layout_alignEnd="@+id/button13" />
</RelativeLayout>
