<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.meghanchua.remoteapp.IphoneDesignActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button10"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp">

        <Button
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/button1"
            android:textSize="50sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/button2"
            android:textSize="50sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/button4"
            android:textSize="50sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/button5"
            android:textSize="50sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/button6"
            android:textSize="50sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/button7"
            android:textSize="50sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/button8"
            android:textSize="50sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/button9"
            android:textSize="50sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/button3"
            android:textSize="50sp" />
    </GridLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/button_power"
        android:scaleType="fitCenter"
        android:src="@drawable/power"
        android:layout_below="@+id/imageButton3"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/up_text"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_up"
        android:layout_above="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/down_text"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_down"
        android:layout_above="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/down_text"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_down"
        android:layout_alignTop="@+id/imageButton4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/up_text"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_up"
        android:layout_above="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/channel_text"
        android:textSize="40sp"
        android:layout_above="@+id/imageButton5"
        android:layout_alignLeft="@+id/imageButton5"
        android:layout_alignStart="@+id/imageButton5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_text"
        android:textSize="40sp"
        android:layout_above="@+id/imageButton4"
        android:layout_alignRight="@+id/imageButton4"
        android:layout_alignEnd="@+id/imageButton4" />


    <Button
        android:id="@+id/button10"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/back_text"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button13"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:onClick="buttonOnClickIphoneDesign2"
        android:text="@string/panel_text"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button12"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/help_text"
        android:onClick="buttonOnClickHelpScreen1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="30sp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
