<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.meghanchua.remoteapp.LayeredGuide">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_guide"
        android:id="@+id/layered_guide"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_text"
        android:id="@+id/guide_up"
        android:layout_marginTop="105dp"
        android:layout_below="@+id/layered_guide"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_text"
        android:id="@+id/guide_left"
        android:layout_below="@+id/guide_up"
        android:layout_toLeftOf="@+id/layered_guide"
        android:layout_toStartOf="@+id/layered_guide" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_text"
        android:id="@+id/guide_right"
        android:layout_alignBottom="@+id/guide_left"
        android:layout_toRightOf="@+id/layered_guide"
        android:layout_toEndOf="@+id/layered_guide" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_text"
        android:id="@+id/guide_down"
        android:layout_below="@+id/guide_left"
        android:layout_alignLeft="@+id/guide_up"
        android:layout_alignStart="@+id/guide_up" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_text"
        android:id="@+id/guide_select"
        android:layout_below="@+id/guide_down"
        android:layout_alignLeft="@+id/guide_down"
        android:layout_alignStart="@+id/guide_down"
        android:layout_marginTop="31dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_text"
        android:id="@+id/layered_record"
        android:layout_below="@+id/layered_guide"
        android:layout_toRightOf="@+id/guide_up"
        android:layout_toEndOf="@+id/guide_up"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="38dp" />
</RelativeLayout>
