<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.meghanchua.remoteapp.LayeredPlayback">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_playback"
        android:id="@+id/layered_playback"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayout3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewind_text"
            android:id="@+id/button_rewind"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="left|right"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_text"
            android:id="@+id/button_pause"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward_text"
            android:id="@+id/button_forward"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_text"
            android:id="@+id/button_stop"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_text"
            android:id="@+id/button_play"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:textSize="25sp"/>
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layered_playback"
        android:layout_toRightOf="@+id/layered_playback"
        android:layout_toEndOf="@+id/layered_playback"
        android:layout_marginTop="45dp"
        android:id="@+id/gridLayout2">

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_text"
        android:id="@+id/button_reocrd"
        android:textSize="20sp"
        android:layout_below="@+id/button_up"
        android:layout_alignLeft="@+id/layered_playback"
        android:layout_alignStart="@+id/layered_playback" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_text"
        android:id="@+id/button_up"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_alignTop="@+id/gridLayout2"
        android:layout_alignRight="@+id/layered_playback"
        android:layout_alignEnd="@+id/layered_playback"
        android:textSize="20sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_text"
        android:id="@+id/button_down"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_below="@+id/button_up"
        android:layout_alignRight="@+id/layered_playback"
        android:layout_alignEnd="@+id/layered_playback"
        android:textSize="20sp"/>
</RelativeLayout>
